fix: use keyboard tab key to jump to anchors inside Autocomplete
- Add official support for anchors
- Also added testing library, because the userEvent.tab() feature is very useful, and we anyway want to let people use testing library.

--- a/packages/dnb-eufemia/src/fragments/drawer-list/style/themes/dnb-drawer-list-theme-ui.scss
+++ b/packages/dnb-eufemia/src/fragments/drawer-list/style/themes/dnb-drawer-list-theme-ui.scss
@@ -196,6 +196,12 @@
     &.last-of-type:not(#{&}--focus)::before {
       content: none;
     }
+
+    &--selected &__item {
+      .dnb-anchor:focus {
+        @include fakeFocus(null, var(--color-white));
+      }
+    }
   }
 
   // make sure we have a spacing on the right side if we have a scrollbar
